# ChaLENNGe

./: .gitignore  README.md  apply-nn.py  apply_nn_karman.py  continue_training.py  pyproject.toml  run-all-original-tensorflow.py  run_all.py  validate_free_turbulence.py
.github/workflows/: tests.yml
context/: task01-free.turbulence.md  task02-fable-architecture-01-draft.md  task02-fable-architecture-02-polished.md
context-plan-guidance/: 00-README.md  01-paper-comparison-and-factcheck.md  02-resnet-karman-vv-plan.md  03-bedrunka-nco-adoption.md  04-verification-checklist.md  05-design-rationale.md
docs/: apply-karman.md  equivariance-background.md  free-turbulence-validation.md
eval_helpers/: bounded_blend_check.py  constraints_check.py  equivariance_inspect.py  fetch_rmsre.py  plot_wake.py  rebuild.py
eval_results/: eval_metrics.csv
jobs/: run-all-tensorflow.sh
lbm_ml/: __init__.py  provenance.py  training.py
lbm_ml/data/: __init__.py  generation.py  simulation.py
lbm_ml/lattice/: __init__.py  stencil.py  symmetry.py
lbm_ml/model/: __init__.py  losses.py  network.py
lbm_ml/validation/: __init__.py  free_turbulence.py
scripts/: job-gpu-h100-salloc-12hr.sh
tests/: conftest.py  test_drivers.py  test_network.py  test_symmetry.py
