[project]
name = "learning-lbm-collision-operator"
version = "0.1.0"
description = "Learning Lattice Boltzmann collision operators with neural networks"
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    # Running scripts/snellius-py-runtime-setup.sh adds tensorflow[and-cuda] here, please do not commit this change to keep the repo runtime agnostic
    "tensorflow>=2.21.0",
    "setuptools>=70.0,<80.0",
    "tensorboard>=2.20.0",
    "tqdm>=4.67.3",
    "pandas>=2.3.3",
    "tabulate>=0.10.0",
]

[dependency-groups]
dev = [
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["lbm_ml*"]

[tool.uv]
package = true
